syntax = "proto3";
option java_package = "com.user";
option java_multiple_files = true;

service UserService {
  rpc findUser (UserRequest) returns (UserResponse){}
}

message UserRequest {
  string userId = 1;
  string userName = 2;
  string phoneNumber = 3;
  string email = 4;
}

message UserResponse {
  string response = 1;
}